tests/snapshots/cmd_generate_matrix__matrix_and_needs_combined.snap
---
source: tests/cmd_generate_matrix.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    const build = ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() {
        run("cargo build")
        return { artifact: "build.tar.gz" }
      }
    })

    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      needs: [build],
      strategy: matrix({
        target: ["x86_64", "aarch64"],
      }),
      steps(ctx) {
        run(`echo testing ${ctx.matrix.target} with ${ctx.needs.build.outputs.artifact}`)
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    outputs:
      artifact: build.tar.gz
    steps:
    - id: step_0
      run: cargo build
  test:
    name: Test
    runs-on: ubuntu-latest
    needs:
    - build
    strategy:
      matrix:
        target:
        - x86_64
        - aarch64
    steps:
    - id: step_0
      run: echo testing ${{ matrix.target }} with ${{ needs.build.outputs.artifact }}
