tests/snapshots/cmd_generate_matrix__matrix_nested_objects.snap
---
source: tests/cmd_generate_matrix.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      strategy: matrix({
        config: [
          { version: 14, env: "staging" },
          { version: 20, env: "production" },
        ],
      }),
      steps(ctx) {
        run(`echo ${ctx.matrix.config.version} ${ctx.matrix.config.env}`)
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    strategy:
      matrix:
        config:
        - env: staging
          version: 14
        - env: production
          version: 20
    steps:
    - id: step_0
      run: echo ${{ matrix.config.version }} ${{ matrix.config.env }}
